# LINUX_programming

02_TerminalProject/: Show.c
03_Multifile/: Makefile  fun.c  prog  prog-so  prog.c
03_TerminalProject/: Makefile  Show  Show.c  text.txt
04_Text/: asc2_archive.txt  current_script.sh
05_Debugging/: Makefile  range  range.c  script-1.gdb  script-2.gdb
06_TracingFencing/: move  move.c  outfile.txt
08_Regexps/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  esub.c  esub.h  main  replace.c
09_Testing/: Makefile.am  config.h.in~  config.status  configure  configure.ac
09_Testing/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
09_Testing/src/: Makefile.am  buf.c  buf.h
09_Testing/test/: Makefile.am  test.h  test_init.c  test_pop.c  test_push.c
10_I18n/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  aclocal.m4  cmake_install.cmake  config.h  config.status  configure  configure.ac  project_name  ru.po
10_I18n/autom4te.cache/: output.0  output.2  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
10_I18n/po/: Makefile.am  ru.po
10_I18n/src/: Makefile  Makefile.in  main.c
11_Documenting/: Makefile.am  main  main.c
9AbX6j0MqaM/: a.out
